--- a/Project.toml
+++ b/Project.toml
@@ -4,8 +4,7 @@ authors = ["Harindu Bandara <harindudb@gmail.com>"]
 version = "0.1.0"
 
 [deps]
-DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
-Genie = "c43c736e-a2d1-11e8-161f-af95117fbd1e"
-GenieFramework = "a59fdf5c-6bf0-4f5d-949c-a137c9e2f353"
 LibSerialPort = "a05a14c7-6e3b-5ba9-90a2-45558833e1df"
+Mousetrap = "5deeb4b9-6e04-4da7-8b7f-c77fb1eae65e"
 Reactive = "a223df75-4e93-5b7c-acf9-bdd599c0f4de"
+libmousetrap_jll = "287f9a42-973b-50d0-ae32-9952e735a47d"
