--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,8 @@ version = "0.1.0"
 
 [deps]
 LibSerialPort = "a05a14c7-6e3b-5ba9-90a2-45558833e1df"
+Match = "7eb4fadd-790c-5f42-8a69-bfa0b872bfbf"
+Mosquitto = "db317de6-444b-4dfa-9d0e-fbf3d8dd78ea"
 Mousetrap = "5deeb4b9-6e04-4da7-8b7f-c77fb1eae65e"
 Reactive = "a223df75-4e93-5b7c-acf9-bdd599c0f4de"
 libmousetrap_jll = "287f9a42-973b-50d0-ae32-9952e735a47d"
