--- a/Project.toml
+++ b/Project.toml
@@ -4,9 +4,9 @@ authors = ["Harindu Bandara <harindudb@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LibSerialPort = "a05a14c7-6e3b-5ba9-90a2-45558833e1df"
 Match = "7eb4fadd-790c-5f42-8a69-bfa0b872bfbf"
 Mosquitto = "db317de6-444b-4dfa-9d0e-fbf3d8dd78ea"
 Mousetrap = "5deeb4b9-6e04-4da7-8b7f-c77fb1eae65e"
-Reactive = "a223df75-4e93-5b7c-acf9-bdd599c0f4de"
 libmousetrap_jll = "287f9a42-973b-50d0-ae32-9952e735a47d"
